--- a/app/com/clashcode/web/views/main.scala.html
+++ b/app/com/clashcode/web/views/main.scala.html
@@ -10,6 +10,7 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/moment.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/scala.js?1")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/game.js?1")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/app.js?1")" type="text/javascript"></script>
     </head>
     <body>
